icons and categories screen

--- a/feature-start/src/main/res/layout/item_nations_and_types_title.xml
+++ b/feature-start/src/main/res/layout/item_nations_and_types_title.xml
@@ -9,6 +9,8 @@
         android:id="@+id/itemNationsAndTypesTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/start_default_margin"
+        android:layout_marginEnd="@dimen/start_default_margin"
         android:textColor="@color/title"
         android:textSize="@dimen/title_text"
         tools:text="Title"/>
