--- a/feature-start/src/main/res/layout/item_nations_and_types_value.xml
+++ b/feature-start/src/main/res/layout/item_nations_and_types_value.xml
@@ -9,12 +9,13 @@
         android:id="@+id/itemNationsAndTypesValuesIcon"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_margin="@dimen/start_default_margin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="4:3"
         app:layout_constraintWidth_default="percent"
-        app:layout_constraintWidth_percent=".20"/>
+        app:layout_constraintWidth_percent=".15"/>
 
     <TextView
         android:id="@+id/itemNationsAndTypesValuesTitle"
