--- a/core-ui/src/main/res/values/dimens.xml
+++ b/core-ui/src/main/res/values/dimens.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="default_margin">16dp</dimen>
+    <dimen name="default_half_margin">8dp</dimen>
+
+    <dimen name="icon_default_size">24dp</dimen>
+
+    <dimen name="category_item_size">100dp</dimen>
 </resources>
